--- a/SwiftTemplate.xcodeproj/xcshareddata/xcschemes/SwiftTemplate.xcscheme
+++ b/SwiftTemplate.xcodeproj/xcshareddata/xcschemes/SwiftTemplate.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F6EDEF142845225B00BB49B9"
-               BuildableName = "Test_API_Login.xctest"
+               BuildableName = "Test.xctest"
                BlueprintName = "Test"
                ReferencedContainer = "container:SwiftTemplate.xcodeproj">
             </BuildableReference>
