Integración de la lista de slides

--- a/SwiftTemplate.xcodeproj/xcshareddata/xcschemes/SwiftTemplate.xcscheme
+++ b/SwiftTemplate.xcodeproj/xcshareddata/xcschemes/SwiftTemplate.xcscheme
@@ -72,6 +72,11 @@
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
+            key = "endpoint.Slides"
+            value = "api/slides"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
             key = "baseURL"
             value = "https://ongapi.alkemy.org/"
             isEnabled = "YES">
