--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,10 +4,10 @@ on:
 
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
-      - main
+      - develop
 jobs:
   Run_workspace_Tests:
     runs-on: macOS-latest
