--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -28,7 +28,7 @@ jobs:
     - name: CocoaPod Install
       run: pod install
     - name: Build
-      run: xcodebuild -workspace SwiftTemplate.xcworkspace -scheme SwiftTemplate -configuration Release -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12
+      run: xcodebuild -workspace SwiftTemplate.xcworkspace -scheme SwiftTemplate -configuration Release -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12'
     - name: Test
       run: xcodebuild -workspace SwiftTemplate.xcworkspace -scheme SwiftTemplate -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12' test
     - name: Upload coverage to Codecov
